Update and rename index (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>be1.ru</title>
+	<title>FreeApp — Платные приложения из Play Marker бесплатно
+	</title>
 </head>
 <body>
 <p>FreeApp PlayMarket Downloader</p>
